--- a/APIDocumentation/cta-dataset-fr.html
+++ b/APIDocumentation/cta-dataset-fr.html
@@ -359,7 +359,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>French</td>
-                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=manufacturer&lang=fr">Accès</a></td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cta/api/CSV/DownloadCSV?dataType=manufacturer&lang=fr">Accès</a></td>
                                         </tr>
 
                                         <!--Manufacturer Ends-->
@@ -389,7 +389,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>French</td>
-                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=condition&lang=fr">Accès</a></td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cta/api/CSV/DownloadCSV?dataType=condition&lang=fr">Accès</a></td>
                                         </tr>
 
                                         <!--Medical Condition Ends-->
@@ -419,7 +419,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>French</td>
-                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=brand&lang=fr">Accès</a></td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cta/api/CSV/DownloadCSV?dataType=brand&lang=fr">Accès</a></td>
                                         </tr>
 
                                         <!--Product Brand Ends-->
@@ -449,7 +449,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>French</td>
-                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=protocol&lang=fr">Accès</a></td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cta/api/CSV/DownloadCSV?dataType=protocol&lang=fr">Accès</a></td>
                                         </tr>
 
                                         <!--Protocol Form Ends-->
@@ -477,7 +477,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>French</td>
-                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=statuss&lang=fr">Accès</a></td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cta/api/CSV/DownloadCSV?dataType=statuss&lang=fr">Accès</a></td>
                                         </tr>
 
                                         <!--Status Ends-->
@@ -507,7 +507,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>French</td>
-                                            <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=population&lang=fr">Accès</a></td>
+                                            <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cta/api/CSV/DownloadCSV?dataType=population&lang=fr">Accès</a></td>
                                         </tr>
 
                                         <!--Study Population Ends-->
