--- a/APIDocumentation/cvp-dataset-en.html
+++ b/APIDocumentation/cvp-dataset-en.html
@@ -304,7 +304,7 @@
                                             <td>CSV</td>
                                             <td>English</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=drugName&lang=en">Access</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=drugName&lang=en">Access</a>
                                             </td>
                                         </tr>
 
@@ -337,7 +337,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=ingredient&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=ingredient&lang=en">Access</a>
                                         </td>
                                     </tr>
 
@@ -370,7 +370,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=products&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=products&lang=en">Access</a>
                                         </td>
                                     </tr>
 
@@ -403,7 +403,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=gender&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=gender&lang=en">Access</a>
                                         </td>
                                     </tr>
 
@@ -436,7 +436,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=outcome&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=outcome&lang=en">Access</a>
                                         </td>
                                     </tr>
 
@@ -468,7 +468,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=reaction&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=reaction&lang=en">Access</a>
                                         </td>
                                     </tr>
 
@@ -501,7 +501,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=reportDrug&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=reportDrug&lang=en">Access</a>
                                         </td>
                                     </tr>
 
@@ -534,7 +534,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=info&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=info&lang=en">Access</a>
                                         </td>
                                     </tr>
 
@@ -569,7 +569,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=reportLink&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=reportLink&lang=en">Access</a>
                                         </td>
                                     </tr>
 
@@ -601,7 +601,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=reportType&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=reportType&lang=en">Access</a>
                                         </td>
                                     </tr>
 
@@ -633,7 +633,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=report&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=report&lang=en">Access</a>
                                         </td>
                                     </tr>
 
@@ -665,7 +665,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=seriousness&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=seriousness&lang=en">Access</a>
                                         </td>
                                     </tr>
 
@@ -697,7 +697,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=source&lang=en">Access</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=source&lang=en">Access</a>
                                         </td>
                                     </tr>
 
