--- a/APIDocumentation/dhpr-dataset-en.html
+++ b/APIDocumentation/dhpr-dataset-en.html
@@ -381,7 +381,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=activeIngredient&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=activeIngredient&lang=en">Access</a></td>
                                     </tr>
 
 
@@ -408,7 +408,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aer&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aer&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Aer Gender -->
@@ -435,7 +435,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aerGender&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aerGender&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Aer Indication -->
@@ -462,7 +462,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=AerIndication&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=AerIndication&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Aer Ingredient -->
@@ -488,7 +488,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aerIngredient&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aerIngredient&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Aer Link -->
@@ -514,7 +514,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aerLink&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aerLink&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Aer Outcome -->
@@ -541,7 +541,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aerOutcome&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aerOutcome&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Aer Product Information -->
@@ -567,7 +567,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aerProductInfo&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aerProductInfo&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Aer Reaction Term -->
@@ -593,7 +593,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=reactionTerm&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=reactionTerm&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Aer Report Type -->
@@ -619,7 +619,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=reportType&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=reportType&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Aer Serious -->
@@ -645,7 +645,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=serious&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=serious&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Aer Source -->
@@ -671,7 +671,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=source&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=source&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Brand Name -->
@@ -698,7 +698,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Unilingual</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=brandName&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=brandName&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Ci -->
@@ -724,7 +724,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=ci&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=ci&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Company -->
@@ -750,7 +750,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=company&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=company&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Drug Product -->
@@ -776,7 +776,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=drugProduct&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=drugProduct&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Pharm Form -->
@@ -802,7 +802,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=pharmForm&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=pharmForm&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Product Monograph -->
@@ -828,7 +828,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productMonograph&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=productMonograph&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Route -->
@@ -854,7 +854,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=route&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=route&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Xref -->
@@ -879,7 +879,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=xref&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=xref&lang=en">Access</a></td>
                                     </tr>
 
                                     <tr>
