--- a/APIDocumentation/dhpr-dataset-fr.html
+++ b/APIDocumentation/dhpr-dataset-fr.html
@@ -405,7 +405,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=activeIngredient&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=activeIngredient&lang=fr">Accès</a></td>
                                     </tr>
 
 
@@ -432,7 +432,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aer&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aer&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Aer Gender -->
@@ -459,7 +459,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aerGender&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aerGender&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Aer Indication -->
@@ -486,7 +486,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=AerIndication&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=AerIndication&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Aer Ingredient -->
@@ -512,7 +512,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aerIngredient&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aerIngredient&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Aer Link -->
@@ -538,7 +538,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aerLink&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aerLink&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Aer Outcome -->
@@ -565,7 +565,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aerOutcome&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aerOutcome&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Aer Product Information -->
@@ -591,7 +591,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=aerProductInfo&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=aerProductInfo&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Aer Reaction Term -->
@@ -617,7 +617,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=reactionTerm&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=reactionTerm&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Aer Report Type -->
@@ -643,7 +643,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=reportType&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=reportType&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Aer Serious -->
@@ -669,7 +669,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=serious&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=serious&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Aer Source -->
@@ -695,7 +695,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=source&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=source&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Brand Name -->
@@ -722,7 +722,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Unilingual</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=brandName&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=brandName&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Ci -->
@@ -748,7 +748,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=ci&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=ci&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Company -->
@@ -774,7 +774,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=company&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=company&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Drug Product -->
@@ -800,7 +800,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=drugProduct&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=drugProduct&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Pharm Form -->
@@ -826,7 +826,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=pharmForm&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=pharmForm&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Product Monograph -->
@@ -852,7 +852,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productMonograph&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=productMonograph&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Route -->
@@ -878,7 +878,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=route&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=route&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Xref -->
@@ -903,7 +903,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=xref&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dhpr1/api/CSV/DownloadCSV?dataType=xref&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <tr>
