--- a/APIDocumentation/dpd-dataset-fr.html
+++ b/APIDocumentation/dpd-dataset-fr.html
@@ -302,7 +302,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=activeIngredient&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=activeIngredient&lang=fr">Accès</a></td>
                                     </tr>
                                     <!--Company-->
                                     <tr>
@@ -331,7 +331,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=company&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=company&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <tr>
@@ -361,7 +361,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=drugProduct&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=drugProduct&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <tr>
@@ -539,7 +539,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=form&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=form&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Packaging-->
@@ -569,7 +569,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=packaging&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=packaging&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Pharmaceutical Std -->
@@ -597,7 +597,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=pharmStd&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=pharmStd&lang=fr">Accès</a></td>
                                     </tr>
                                     <!-- Route -->
                                     <tr>
@@ -626,7 +626,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=route&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=route&lang=fr">Accès</a></td>
                                     </tr>
                                     <!--Schedule-->
                                     <tr>
@@ -655,7 +655,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=schedule&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=schedule&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Status -->
@@ -685,7 +685,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=status&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=status&lang=fr">Accès</a></td>
                                     </tr>
 
 
@@ -717,7 +717,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=therapeutic&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=therapeutic&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Veterinary Species -->
@@ -747,7 +747,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=vetSpecies&lang=fr">Accès</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=vetSpecies&lang=fr">Accès</a></td>
                                     </tr>
 
                                     <!-- Snippet package/snippets/resource_item.html end -->
