--- a/APIDocumentation/lnhpd-dataset-en.html
+++ b/APIDocumentation/lnhpd-dataset-en.html
@@ -397,7 +397,7 @@
                                         <td>Ingredient</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=ingredient&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=ingredient&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Ingredient Quantity -->
@@ -420,7 +420,7 @@
                                         <td>Ingredient Quantity</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=ingredient&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=ingredient&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Ingredient Source -->
@@ -443,7 +443,7 @@
                                         <td>Ingredient Source</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=ingSource&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=ingSource&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Ingredient Submission -->
@@ -466,7 +466,7 @@
                                         <td>Ingredient Submission</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=ingSubmission&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=ingSubmission&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Product Dose -->
@@ -489,7 +489,7 @@
                                         <td>Product Dose</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productDose&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=productDose&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Product Licence -->
@@ -512,7 +512,7 @@
                                         <td>Produce Licence</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productlicence&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=productlicence&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Product Purpose -->
@@ -535,7 +535,7 @@
                                         <td>Product Purpose</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productPurpose&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=productPurpose&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Product Risk -->
@@ -558,7 +558,7 @@
                                         <td>Product Risk</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productRisk&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=productRisk&lang=en">Access</a></td>
                                     </tr>
 
                                     <!-- Product Route -->
@@ -581,7 +581,7 @@
                                         <td>Product Route</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productRoute&lang=en">Access</a></td>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=productRoute&lang=en">Access</a></td>
                                     </tr>
 
                                     <tr>
