--- a/APIDocumentation/noc-dataset-fr.html
+++ b/APIDocumentation/noc-dataset-fr.html
@@ -360,7 +360,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>Français</td>
-                                            <td><a href="./api/CSV/DownloadCSV?dataType=brand&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=brand&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
                                         </tr>
 
                                         <!--Brand Ends-->
@@ -390,7 +390,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>Français</td>
-                                            <td><a href="./api/CSV/DownloadCSV?dataType=nocci&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=nocci&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
                                         </tr>
 
                                         <!--NOC Main Ends-->
@@ -419,7 +419,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>Français</td>
-                                            <td><a href="./api/CSV/DownloadCSV?dataType=product&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=product&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
                                         </tr>
 
                                         <!--Product Ends-->
@@ -448,7 +448,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>Français</td>
-                                            <td><a href="./api/CSV/DownloadCSV?dataType=productForm&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=productForm&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
                                         </tr>
 
                                         <!--Product Form Ends-->
@@ -477,7 +477,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>Français</td>
-                                            <td><a href="./api/CSV/DownloadCSV?dataType=productIngredient&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=productIngredient&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
                                         </tr>
 
                                         <!--Product Ingredient Ends-->
@@ -506,7 +506,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>Français</td>
-                                            <td><a href="./api/CSV/DownloadCSV?dataType=productRoute&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=productRoute&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
                                         </tr>
 
                                         <!--Product Route Ends-->
@@ -535,7 +535,7 @@
                                             <td>Dataset</td>
                                             <td>CSV</td>
                                             <td>Français</td>
-                                            <td><a href="./api/CSV/DownloadCSV?dataType=vetSpecies&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=vetSpecies&lang=fr" class="resource-url-analytics btn btn-primary">Accès</a></td>
                                         </tr>
 
                                         <!--Veterinary Species Ends-->
