--- a/APIDocumentation/summary-report-dataset-en.html
+++ b/APIDocumentation/summary-report-dataset-en.html
@@ -296,6 +296,7 @@
                                         <td>Summary Basis of Decision</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
+                                        <td>English</td>
                                         <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api-v1/CSV/DownloadCSV/?dataType=basisDecision&lang=en">Access</a></td>
                                     </tr>
                                     
@@ -326,6 +327,7 @@
                                         <td>Regulatory Decision</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
+                                        <td>English</td>
                                         <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api-v1/CSV/DownloadCSV/?dataType=regDecision&lang=en">Access</a></td>
                                     </tr>
 
@@ -353,6 +355,7 @@
                                         <td>Regulatory Decision</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
+                                        <td>English</td>
                                         <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api-v1/CSV/DownloadCSV/?dataType=safetyReview&lang=en">Access</a></td>
                                     </tr>
 
