--- a/APIDocumentation/summary-report-dataset-fr.html
+++ b/APIDocumentation/summary-report-dataset-fr.html
@@ -296,6 +296,7 @@
                                         <td>Summary Basis of Decision</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
+                                        <td>Français</td>
                                         <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api-v1/CSV/DownloadCSV/?dataType=basisDecision&lang=fr">Accès</a></td>
                                     </tr>
                                     
@@ -326,6 +327,7 @@
                                         <td>Regulatory Decision</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
+                                        <td>Français</td>
                                         <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api-v1/CSV/DownloadCSV/?dataType=regDecision&lang=fr">Accès</a></td>
                                     </tr>
 
@@ -353,6 +355,7 @@
                                         <td>Regulatory Decision</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
+                                        <td>Français</td>
                                         <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api-v1/CSV/DownloadCSV/?dataType=safetyReview&lang=fr">Accès</a></td>
                                     </tr>
 
@@ -364,7 +367,7 @@
                                         <td>HTML</td>
                                         <td>Français</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="http://api.hres.ca/documentation/summary-report-documentation-en.html" target="_blank" title="Resource 3">Accès</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="http://api.hres.ca/documentation/summary-report-documentation-fr.html" target="_blank" title="Resource 3">Accès</a>
                                         </td>
                                     </tr>
 
@@ -384,7 +387,7 @@
                         </div>
                         <!-- prefooter-en.html-Start-->
                         <div id="def-preFooter">
-                            <link rel="import" href="./StaticFallbackFiles/gcweb/prefooter-fr.html">
+                            <link rel="import" href="https://api.hres.ca/regcontent/StaticFallbackFiles/gcweb/prefooter-fr.html">
                         </div>
                         <!-- prefooter-en.html-End-->
                         <!-- Write closure template -->
@@ -404,7 +407,7 @@
         
         <!-- footer-en.html-Start-->
         <div id="def-footer">
-            <link rel="import" href="./StaticFallbackFiles/gcweb/footer-fr.html">
+            <link rel="import" href="https://api.hres.ca/regcontent/StaticFallbackFiles/gcweb/footer-fr.html">
         </div>
         <!-- footer-en.html-End-->
         <!-- Write closure template -->
