--- a/APIDocumentation/cvp-dataset-fr.html
+++ b/APIDocumentation/cvp-dataset-fr.html
@@ -299,7 +299,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=drugName&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=drugName&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -332,7 +332,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=ingredient&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=ingredient&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -365,7 +365,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=products&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=products&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -398,7 +398,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=gender&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=gender&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -431,7 +431,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=outcome&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=outcome&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -463,7 +463,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=reaction&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=reaction&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -496,7 +496,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=reportDrug&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=reportDrug&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -529,7 +529,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=info&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=info&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -564,7 +564,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=reportLink&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=reportLink&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -596,7 +596,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=reportType&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=reportType&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -628,7 +628,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=report&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=report&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -660,7 +660,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=seriousness&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=seriousness&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
@@ -692,7 +692,7 @@
                                             <td>CSV</td>
                                             <td>Français</td>
                                             <td>
-                                                <a class="resource-url-analytics btn btn-primary" href="./api-v1/CSV/DownloadCSV?dataType=source&lang=fr">Accès</a>
+                                                <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=source&lang=fr">Accès</a>
                                             </td>
                                         </tr>
 
