--- a/APIDocumentation/lnhpd-dataset-fr.html
+++ b/APIDocumentation/lnhpd-dataset-fr.html
@@ -395,7 +395,7 @@
                                                 <td>Ingredient</td>
                                                 <td>CSV</td>
                                                 <td>Français</td>
-                                                <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=ingredient&lang=fr">Accès</a></td>
+                                                <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=ingredient&lang=fr">Accès</a></td>
                                             </tr>
 
                                             <!-- Ingredient Quantity -->
@@ -418,7 +418,7 @@
                                                 <td>Ingredient Quantity</td>
                                                 <td>CSV</td>
                                                 <td>Français</td>
-                                                <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=ingredient&lang=fr">Accès</a></td>
+                                                <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=ingredient&lang=fr">Accès</a></td>
                                             </tr>
 
                                             <!-- Ingredient Source -->
@@ -441,7 +441,7 @@
                                                 <td>Ingredient Source</td>
                                                 <td>CSV</td>
                                                 <td>Français</td>
-                                                <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=ingSource&lang=fr">Accès</a></td>
+                                                <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=ingSource&lang=fr">Accès</a></td>
                                             </tr>
 
                                             <!-- Ingredient Submission -->
@@ -464,7 +464,7 @@
                                                 <td>Ingredient Submission</td>
                                                 <td>CSV</td>
                                                 <td>Français</td>
-                                                <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=ingSubmission&lang=fr">Accès</a></td>
+                                                <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=ingSubmission&lang=fr">Accès</a></td>
                                             </tr>
 
                                             <!-- Product Dose -->
@@ -487,7 +487,7 @@
                                                 <td>Product Dose</td>
                                                 <td>CSV</td>
                                                 <td>Français</td>
-                                                <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productDose&lang=fr">Accès</a></td>
+                                                <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=productDose&lang=fr">Accès</a></td>
                                             </tr>
 
                                             <!-- Product Licence -->
@@ -510,7 +510,7 @@
                                                 <td>Produce Licence</td>
                                                 <td>CSV</td>
                                                 <td>Français</td>
-                                                <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productlicence&lang=fr">Accès</a></td>
+                                                <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=productlicence&lang=fr">Accès</a></td>
                                             </tr>
 
                                             <!-- Product Purpose -->
@@ -533,7 +533,7 @@
                                                 <td>Product Purpose</td>
                                                 <td>CSV</td>
                                                 <td>Français</td>
-                                                <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productPurpose&lang=fr">Accès</a></td>
+                                                <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=productPurpose&lang=fr">Accès</a></td>
                                             </tr>
 
                                             <!-- Product Risk -->
@@ -556,7 +556,7 @@
                                                 <td>Product Risk</td>
                                                 <td>CSV</td>
                                                 <td>Français</td>
-                                                <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productRisk&lang=fr">Accès</a></td>
+                                                <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=productRisk&lang=fr">Accès</a></td>
                                             </tr>
 
                                             <!-- Product Route -->
@@ -579,7 +579,7 @@
                                                 <td>Product Route</td>
                                                 <td>CSV</td>
                                                 <td>Français</td>
-                                                <td><a class="resource-url-analytics btn btn-primary" href="./api/CSV/DownloadCSV?dataType=productRoute&lang=fr">Accès</a></td>
+                                                <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/lnhpd/api/CSV/DownloadCSV?dataType=productRoute&lang=fr">Accès</a></td>
                                             </tr>
 
                                             <tr>
