--- a/APIDocumentation/noc-dataset-en.html
+++ b/APIDocumentation/noc-dataset-en.html
@@ -361,7 +361,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a href="./api/CSV/DownloadCSV?dataType=brand&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=brand&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
 
                                     <!--Brand Ends-->
@@ -391,7 +391,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a href="./api/CSV/DownloadCSV?dataType=nocci&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=nocci&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
 
                                     <!--NOC Main Ends-->
@@ -420,7 +420,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a href="./api/CSV/DownloadCSV?dataType=product&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=product&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
 
                                     <!--Product Ends-->
@@ -449,7 +449,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a href="./api/CSV/DownloadCSV?dataType=productForm&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=productForm&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
 
                                     <!--Product Form Ends-->
@@ -478,7 +478,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a href="./api/CSV/DownloadCSV?dataType=productIngredient&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=productIngredient&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
 
                                     <!--Product Ingredient Ends-->
@@ -507,7 +507,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a href="./api/CSV/DownloadCSV?dataType=productRoute&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=productRoute&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
 
                                     <!--Product Route Ends-->
@@ -536,7 +536,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><a href="./api/CSV/DownloadCSV?dataType=vetSpecies&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
+                                        <td><a href="https://api.hres.ca/noc/api/CSV/DownloadCSV?dataType=vetSpecies&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
 
                                     <!--Veterinary Species Ends-->
