--- a/APIDocumentation/cta-documentation-en.html
+++ b/APIDocumentation/cta-documentation-en.html
@@ -232,11 +232,11 @@
                                 <tr>
                                     <!--LEFT OFF HERE - 20170209 BarryM - Manufacturer-->
                                     <td><strong>manufacturer_id</strong></td>
-                                    <td>The ...</td>
+                                    <td>The identification number assigned to a manufacturer.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>manufacturer_name</strong></td>
-                                    <td>The .....</td>
+                                    <td>The name of the manufacturer.</td>
                                 </tr>
                             </table>
 
@@ -357,11 +357,11 @@
                                 </tr>
                                 <tr>
                                     <td><strong>med_condition_id</strong></td>
-                                    <td>The ...</td>
+                                    <td>The identification number assigned to a medical condition.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>med_condition</strong></td>
-                                    <td>The .....</td>
+                                    <td>The medical condition.</td>
                                 </tr>
                             </table>
 
@@ -480,27 +480,27 @@
                                 </tr>
                                 <tr>
                                     <td><strong>protocol_id</strong></td>
-                                    <td>The ...</td>
+                                    <td>The identification number assigned to the protocol.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>submission_no</strong></td>
-                                    <td>The .....</td>
+                                    <td>The control number.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>brand_id</strong></td>
-                                    <td>The ...</td>
+                                    <td>The identification number assigned to the brand.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>manufacturer_id</strong></td>
-                                    <td>The ...</td>
+                                    <td>The identification number assigned to a manufacturer.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>manufacturer_name</strong></td>
-                                    <td>The ...</td>
+                                    <td>The name of the manufacturer.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>brand_name</strong></td>
-                                    <td>The ...</td>
+                                    <td>The brand name for the drug product.</td>
                                 </tr>
 
                             </table>
@@ -621,67 +621,56 @@
                                 </tr>
                                 <tr>
                                     <td><strong>protocol_id</strong></td>
-                                    <td>The ...</td>
+                                    <td>The identification number assigned to the protocol.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>protocol_no</strong></td>
-                                    <td>The .....</td>
+                                    <td>The protocol number.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>submission_no</strong></td>
-                                    <td>The ...</td>
+                                    <td>The control number.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>status_id</strong></td>
-                                    <td>The ...</td>
+                                    <td>The identification number assigned to a status.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>start_date</strong></td>
-                                    <td>The ...</td>
+                                    <td>The study start date.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>end_date</strong></td>
-                                    <td>The ...</td>
+                                    <td>The study end date.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>nol_date</strong></td>
-                                    <td>The ...</td>
+                                    <td>The date of the No Objection Letter.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>medConditionList</strong></td>
-                                    <td>The ...</td>
+                                    <td>List of medical conditions.</td>
                                 </tr>
                                 <tr>
-                                    <td>
-                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>med_condition_id</strong>
-                                        <!--<ul class="list-unstyled mrgn-lft-md nowrap">med_condition_id</ul>-->
-                                    </td>
-                                    <td>
-                                        <!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The ...-->
-                                        <!--<ul class="list-unstyled mrgn-lft-md nowrap">The ...</ul>-->
-                                    </td>
+                                    <td><strong>med_condition_id</strong></td>
+                                    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The identification number assigned to a medical condition.</td>
+
                                 </tr>
                                 <tr>
-                                    <td>
-                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>med_condition</strong>
-                                        <!--<ul class="list-unstyled mrgn-lft-md nowrap">med_condtion</ul>-->
-                                    </td>
-                                    <td>
-                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The ...
-                                        <!--<ul class="list-unstyled mrgn-lft-md nowrap">The ...</ul>-->
-                                    </td>
+                                    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>med_condition</strong></td>
+                                    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The medical condition.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>studyPopulationList</strong></td>
-                                    <td>The ...</td>
+                                    <td>The study population list.</td>
                                 </tr>
                                 <tr>
                                     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>study_population_id</strong></td>
-                                    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The ...</td>
+                                    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The identification number assigned to the study population.</td>
                                 </tr>
                                 <tr>
-                                    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>study_population</strong></td>
-                                    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The ...</td>
+                                    <td><strong>study_population</strong></td>
+                                    <td>The study population.</td>
                                 </tr>
                             </table>
 
@@ -800,11 +789,11 @@
                                 </tr>
                                 <tr>
                                     <td><strong>status_id</strong></td>
-                                    <td>The ...</td>
+                                    <td>The identification number assigned to a status.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>status</strong></td>
-                                    <td>The .....</td>
+                                    <td>The status of the trial.</td>
                                 </tr>
                             </table>
 
@@ -922,11 +911,11 @@
                                 </tr>
                                 <tr>
                                     <td><strong>study_population_id</strong></td>
-                                    <td>The ...</td>
+                                    <td>The identification number assigned to the study population.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>study_population</strong></td>
-                                    <td>The .....</td>
+                                    <td>The study population.</td>
                                 </tr>
                             </table>
 
@@ -980,7 +969,7 @@
                 var defPreFooter = document.getElementById("def-preFooter");
                 defPreFooter.outerHTML = wet.builder.preFooter({
                     cdnEnv: "prod",
-                    dateModified: "2017-02-27",
+                    dateModified: "2017-08-02",
                     showPostContent: true,
                     showShare: true,
                 });
